--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
             <input type="button" value="+" class="operator" onclick = "display.value += '+'">
           </div>
           <div>
-            <input type="button" value="00" onclick = "display.value= '00'">
-            <input type="button" value="0" onclick = "display.value= '0'">
+            <input type="button" value="00" onclick = "display.value += '00'">
+            <input type="button" value="0" onclick = "display.value += '0'">
             <input type="button" value="=" class="equal operator" onclick = "display.value= eval(display.value)">
           </div>
         </form>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
